syntax = "proto3";

package com.chuntao;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.chuntao.service";
option java_outer_classname = "SensorService";

service SmartAirPollution {

  // Sensor Service: monitor air index and analyse data
  // Simple RPC for collecting sensor data
  rpc GetSensorData(SensorRequest) returns (SensorResponse) {}
  // Client-side streaming RPC for analysing sensor data based on sensor response
  rpc AnalyseSensorData(stream SensorResponse) returns (AnalyseResponse) {}

  // HVAC Service: turn on HVAC based on analyse response
  // Client-side streaming RPC for controlling HVAC
  rpc HVACControl(stream AnalyseResponse) returns (HVACCommand) {}
  // Bidirectional streaming RPC for HVAC switching
  rpc HVACSwitch(stream HVACCommand) returns (stream HVACResponse) {}

  // Notification Service: monitor air index and analyse data
  // Server-side streaming RPC for receiving notifications based on analyze response
  rpc SensorNotifications(AnalyseResponse) returns (stream SensorMessage) {}
  // Server-side streaming RPC for receiving notifications based on HVAC response
  rpc HVACNotifications(HVACResponse) returns (stream HVACMessage) {}

}

message SensorRequest {
  int32 sensor_id = 1;
}

message SensorResponse {
  string location = 1;
  float PM25 = 2; // PM2.5 density in Î¼g/m3 of the air
  float temperature = 3; // Air temperature in Celsius
  float VOC = 4; // VOC level in mg/m3
  float humidity = 5; // Humidity in Percentage
  float CO = 6; // CO in ppm
}

message AnalyseResponse {
  string analyse = 1;
  string location = 2;
  int32 pollution_level = 3;
  string message = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message HVACCommand {
  enum Action {
    START = 0;
    STOP = 1;
  }
  Action action = 1;
}

message HVACResponse {
  string location = 1;
  bool status = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SensorMessage {
  string location = 1;
  string air_quality = 2;
  string message = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message HVACMessage {
  bool status = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
}